err/django-dynamic-cabinetmaps.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cabinet_structure'...
Listing './lib/python3.5/site-packages/cabinet_structure/static'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps/css'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps/img'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps/js'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps/sass'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps/sass/.sass-cache'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps/sass/.sass-cache/7c134596186e4fcdf89ae8fbfa73e7d299818287'...
Listing './lib/python3.5/site-packages/cabinet_structure/static/cabinetmaps/sass/.sass-cache/b3ab845fbfd709757aafdcd5e7f9224a4e2c45b4'...
Listing './lib/python3.5/site-packages/cabinet_structure/utils'...
Compiling './lib/python3.5/site-packages/cabinet_structure/utils/handle.py'...
***   File "./lib/python3.5/site-packages/cabinet_structure/utils/handle.py", line 148
    print rack_structure.create()
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_dynamic_cabinetmaps-0.1.dev2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
